--- a/index.html
+++ b/index.html
@@ -9,54 +9,64 @@
 <body>
 <header class="main-header">
   <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
-  <nav class="main-nav">
-    <img class="main-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Nёrds">
-    <ul class="main-nav__list">
-      <li class="main-nav__item"><a class="main-nav__link" href="#">Студия</a></li>
-      <li class="main-nav__item"><a class="main-nav__link" href="#">Клиенты</a></li>
-      <li class="main-nav__item"><a class="main-nav__link" href="catalog.html">Магазин</a></li>
-      <li class="main-nav__item"><a class="main-nav__link" href="#">Контакты</a></li>
-    </ul>
-  </nav>
-  <div class="main-header__cart-container">
-    <a class="main-header__cart-link" href="#">Корзина</a>
+  <div class="main-header-nav-container outline22">
+    <nav class="main-header-nav">
+      <img class="main-header-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65"
+           alt="Логотип Nёrds">
+      <ul class="main-header-nav__list">
+        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Студия</a></li>
+        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Клиенты</a></li>
+        <li class="main-header-nav__item"><a class="main-header-nav__link" href="catalog.html">Магазин</a></li>
+        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Контакты</a></li>
+      </ul>
+    </nav>
+    <div class="main-header__cart-container">
+      <a class="main-header__cart-link" href="#">Корзина</a>
+    </div>
   </div>
-  <section class="slider">
+  <section class="slider outline23">
     <h2 class="visually-hidden">Слайдер</h2>
     <ul class="slider__list">
-      <li class="slider__item">
-        <p class="slider__slogan">Долго, дорого, скрупулезно</p>
-        <p class="slider__plain-text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-        <a class="button slider__button button--red" href="#">Узнать больше</a>
+      <li class="slider__item slider__item--first-slide visually-hidden">
+        <div class="slider-item">
+          <p class="slider__slogan slider__slogan--first-slide">Долго, дорого, скрупулезно</p>
+          <p class="slider__plain-text slider__plain-text--first-slide">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
+        </div>
       </li>
-      <li class="slider__item">
-        <p class="slider__slogan">Любим математику как никто другой</p>
-        <p class="slider__plain-text">Никакого креатива, только математические формулы для расчета идеальных
-          пропорций.</p>
-        <a class="button slider__button button--red" href="#">Узнать больше</a>
+      <li class="slider__item slider__item--second-slide visually-hidden">
+        <div class="slider-item">
+          <p class="slider__slogan slider__slogan--second-slide">Любим математику как никто другой</p>
+          <p class="slider__plain-text slider__plain-text--second-slide">Никакого креатива, только математические формулы для расчета идеальных
+            пропорций.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
+          </div>
       </li>
-      <li class="slider__item">
-        <p class="slider__slogan">Только ночь,только хардкор</p>
-        <p class="slider__plain-text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
-          начинается.</p>
-        <a class="button slider__button button--red" href="#">Узнать больше</a>
-      </li>
-    </ul>
-    <ul class="slider__switcher-list">
-      <li class="slider__switcher-item">
-        <button class="slider__switcher slider__switcher--active" type="button"></button>
-        <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
-      </li>
-      <li class="slider__switcher-item">
-        <button class="slider__switcher slider__switcher--active" type="button"></button>
-      </li>
-      <li class="slider__switcher-item">
-        <button class="slider__switcher slider__switcher--active" type="button"></button>
+      <li class="slider__item slider__item--third-slide">
+        <div class="slider-item__content">
+          <p class="slider__slogan slider__slogan--third-slide">Только ночь, только хардкор</p>
+          <p class="slider__plain-text slider__plain-text--third-slide">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
+            начинается.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
+        </div>
       </li>
     </ul>
+    <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
+    <!-- TODO Расскомментировать при верстке слайдера <li class="slider__switcher-item"
+<ul class="slider__switcher-list">
+<li class="slider__switcher-item">
+  <button class="slider__switcher slider__switcher--active" type="button"></button>
+  </li>
+
+  <button class="slider__switcher slider__switcher--active" type="button"></button>
+</li>
+<li class="slider__switcher-item">
+  <button class="slider__switcher slider__switcher--active" type="button"></button>
+</li>
+</ul> -->
   </section>
 </header>
-<main class="main">
+<main class="main-wrapper">
   <section class="services">
     <h2 class="visually-hidden">Типы услуг</h2>
     <ul class="services__list">
