--- a/index.html
+++ b/index.html
@@ -7,161 +7,170 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="main-header">
-  <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
-  <div class="main-header-nav-container outline22">
-    <nav class="main-header-nav">
-      <img class="main-header-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65"
-           alt="Логотип Nёrds">
-      <ul class="main-header-nav__list">
-        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Студия</a></li>
-        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Клиенты</a></li>
-        <li class="main-header-nav__item"><a class="main-header-nav__link" href="catalog.html">Магазин</a></li>
-        <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Контакты</a></li>
-      </ul>
-    </nav>
-    <div class="main-header__cart-container">
-      <a class="main-header__cart-link" href="#">Корзина</a>
+<header class="external-container external-container--header">
+  <div class="internal-container internal-container--header outline22">
+    <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
+    <div class="main-header-nav-container">
+      <nav class="main-header-nav">
+        <img class="main-header-nav__logo-img" src="img/nerds-logo.svg" width="160" height="65"
+             alt="Логотип Nёrds">
+        <ul class="main-header-nav__list">
+          <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Студия</a></li>
+          <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Клиенты</a></li>
+          <li class="main-header-nav__item"><a class="main-header-nav__link" href="catalog.html">Магазин</a></li>
+          <li class="main-header-nav__item"><a class="main-header-nav__link" href="#">Контакты</a></li>
+        </ul>
+      </nav>
+      <div class="main-header__cart-container">
+        <a class="main-header__cart-link" href="#">Корзина</a>
+      </div>
     </div>
-  </div>
-  <section class="slider outline23">
-    <h2 class="visually-hidden">Слайдер</h2>
-    <ul class="slider__list">
-      <li class="slider__item slider__item--first-slide visually-hidden">
-        <div class="slider-item">
-          <p class="slider__slogan slider__slogan--first-slide">Долго, дорого, скрупулезно</p>
-          <p class="slider__plain-text slider__plain-text--first-slide">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a class="button slider__button button--red" href="#">Узнать больше</a>
-        </div>
-      </li>
-      <li class="slider__item slider__item--second-slide visually-hidden">
-        <div class="slider-item">
-          <p class="slider__slogan slider__slogan--second-slide">Любим математику как никто другой</p>
-          <p class="slider__plain-text slider__plain-text--second-slide">Никакого креатива, только математические формулы для расчета идеальных
-            пропорций.</p>
-          <a class="button slider__button button--red" href="#">Узнать больше</a>
+    <section class="slider">
+      <h2 class="visually-hidden">Слайдер</h2>
+      <ul class="slider__list">
+        <li class="slider__item slider__item--first-slide visually-hidden">
+          <div class="slider-item">
+            <p class="slider__slogan slider__slogan--first-slide">Долго, дорого, скрупулезно</p>
+            <p class="slider__plain-text slider__plain-text--first-slide">Математически выверенный дизайн для вашего
+              сайта или мобильного приложения.</p>
+            <a class="button slider__button button--red" href="#">Узнать больше</a>
           </div>
-      </li>
-      <li class="slider__item slider__item--third-slide">
-        <div class="slider-item__content">
-          <p class="slider__slogan slider__slogan--third-slide">Только ночь, только хардкор</p>
-          <p class="slider__plain-text slider__plain-text--third-slide">Работать днем, как все? Мы против этого. Ближе к полуночи работа только
-            начинается.</p>
-          <a class="button slider__button button--red" href="#">Узнать больше</a>
-        </div>
-      </li>
-    </ul>
-    <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
-    <!-- TODO Расскомментировать при верстке слайдера <li class="slider__switcher-item"
-<ul class="slider__switcher-list">
-<li class="slider__switcher-item">
-  <button class="slider__switcher slider__switcher--active" type="button"></button>
-  </li>
+        </li>
+        <li class="slider__item slider__item--second-slide visually-hidden">
+          <div class="slider-item">
+            <p class="slider__slogan slider__slogan--second-slide">Любим математику как никто другой</p>
+            <p class="slider__plain-text slider__plain-text--second-slide">Никакого креатива, только математические
+              формулы для расчета идеальных
+              пропорций.</p>
+            <a class="button slider__button button--red" href="#">Узнать больше</a>
+          </div>
+        </li>
+        <li class="slider__item slider__item--third-slide">
+          <div class="slider-item__content">
+            <p class="slider__slogan slider__slogan--third-slide">Только ночь, только хардкор</p>
+            <p class="slider__plain-text slider__plain-text--third-slide">Работать днем, как все? Мы против этого. Ближе
+              к полуночи работа только
+              начинается.</p>
+            <a class="button slider__button button--red" href="#">Узнать больше</a>
+          </div>
+        </li>
+      </ul>
+      <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
+      <!-- TODO Расскомментировать при верстке слайдера. Это кнопки переключения слайдов <li class="slider__switcher-item"
+  <ul class="slider__switcher-list">
+  <li class="slider__switcher-item">
+    <button class="slider__switcher slider__switcher--active" type="button"></button>
+    </li>
 
-  <button class="slider__switcher slider__switcher--active" type="button"></button>
-</li>
-<li class="slider__switcher-item">
-  <button class="slider__switcher slider__switcher--active" type="button"></button>
-</li>
-</ul> -->
-  </section>
+    <button class="slider__switcher slider__switcher--active" type="button"></button>
+  </li>
+  <li class="slider__switcher-item">
+    <button class="slider__switcher slider__switcher--active" type="button"></button>
+  </li>
+  </ul> -->
+    </section>
+  </div>
 </header>
-<main class="main-wrapper">
-  <section class="services">
-    <h2 class="visually-hidden">Типы услуг</h2>
-    <ul class="services__list">
-      <li class="services__item">
-        <img class="services__icon" src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
-        <h3 class="services__title">Веб-сайты</h3>
-        <p class="services__plain-text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-        <a class="button services__button button--red" href="#">Заказать</a>
-      </li>
-      <li class="services__item">
-        <img class="services__icon" src="img/illustration-2.jpg" width="300" height="146" alt="Мобильные приложения">
-        <h3 class="services__title">Приложения</h3>
-        <p class="services__plain-text">Покорите топ-10 приложений в AppStore и Google Play</p>
-        <a class="button services__button button--green" href="#">Заказать</a>
-      </li>
-      <li class="services__item">
-        <img class="services__icon" src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
-        <h3 class="services__title">Презентации</h3>
-        <p class="services__plain-text">Вы даже не подозреваете, насколько вы изумительны!</p>
-        <a class="button services__button button--yellow" href="#">Заказать</a>
-      </li>
-    </ul>
-  </section>
-  <section class="about-company">
-    <h2 class="visually-hidden">О нас</h2>
-    <div class="about-company__left-part">
-      <b class="about-company__slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
-      <p class="about-company__plain-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-        превыше креатива. Работаем не покладая
-        рук, как роботы.</p>
-      <b class="about-company__subtitle">Выполняем заказы на разработку:</b>
-      <ul class="about-company__lpart-list">
-        <li class="about-company__lpart-item">Веб-сайтов любой сложности</li>
-        <li class="about-company__lpart-item">Мобильных приложений для iOS и Android</li>
-        <li class="about-company__lpart-item">Слайдшоу и видео для корпоративных презентаций</li>
-      </ul>
-    </div>
-    <div class="about-company__right-part">
-      <img src="img/studio-nerds.png" width="360" height="208" alt="Дизайн-студия Nerds">
-      <b class="about-company__subtitle about-company__subtitle--centered-condensed">с 2004 года Любим точность во
-        всем:</b>
-      <ul class="about-company__rpart-list">
-        <li class="about-company__rpart-item">
-          <b class="about-company__percents">146<sup>%</sup></b>
-          <p class="about-company__plain-text">Уровень самоотдачи</p>
+<main class="external-container external-container--main">
+  <div class="internal-container internal-container--main outline22">
+    <section class="services outline23">
+      <h2 class="visually-hidden">Типы услуг</h2>
+      <ul class="services__list">
+        <li class="services__item outline24">
+          <img class="services__icon" src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
+          <h3 class="services__title">Веб-сайты</h3>
+          <p class="services__plain-text services__plain-text--web">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+          <a class="button services__button button--red" href="#">Заказать</a>
         </li>
-        <li class="about-company__rpart-item">
-          <b class="about-company__percents">100<sup>%</sup></b>
-          <p class="about-company__plain-text">Соблюдение сроков</p>
+        <li class="services__item outline24">
+          <img class="services__icon" src="img/illustration-2.jpg" width="300" height="146" alt="Мобильные приложения">
+          <h3 class="services__title">Приложения</h3>
+          <p class="services__plain-text services__plain-text--soft">Покорите топ-10 приложений в AppStore и Google Play</p>
+          <a class="button services__button button--green" href="#">Заказать</a>
         </li>
-        <li class="about-company__rpart-item">
-          <b class="about-company__percents">50<sup>%</sup></b>
-          <p class="about-company__plain-text">Минимальная предоплата</p>
+        <li class="services__item outline24">
+          <img class="services__icon" src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
+          <h3 class="services__title">Презентации</h3>
+          <p class="services__plain-text services__plain-text--presentation">Вы даже не подозреваете, насколько вы изумительны!</p>
+          <a class="button services__button button--yellow" href="#">Заказать</a>
         </li>
       </ul>
-    </div>
-  </section>
-  <section class="parnter-logo">
-    <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
-    <ul class="partner-logo__list">
-      <li class="partner-logo__item">
-        <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
-          <img class="partner-logo__pict" src="img/logo-1.png" width="199" height="68" alt="Сайт HTML Academy">
-        </a>
-      </li>
-      <li class="partner-logo__item">
-        <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-2.png" width="209" height="90" alt="Сайт Barbershop Borodinski">
-        </a>
-      </li>
-      <li class="partner-logo__item">
-        <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-3.png" width="185" height="52" alt="Сайт Pink">
-        </a>
-      </li>
-      <li class="partner-logo__item">
-        <a class="partner-logo__link" href="#">
-          <img class="partner-logo__pict" src="img/logo-4.png" width="173" height="84" alt="Сайт Mishka">
-        </a>
-      </li>
-    </ul>
-  </section>
-  <section class="contacts">
-    <h2 class="visually-hidden">Как с нами связаться</h2>
-    <img class="contacts__map" src="img/map.jpg" width="1440" height="416"
-         alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-    <div class="contacts__requisites">
-      <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
-      <address class="contacts__plain-text text--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-      <p class="contacts__plain-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey" href="tel:+78122757575">+7
-        (812)
-        275-75-75</a></p>
-      <a class="button contacts__button button--red" href="#">Напишите нам</a>
-    </div>
-  </section>
+    </section>
+    <section class="about-company">
+      <h2 class="visually-hidden">О нас</h2>
+      <div class="about-company__left-part">
+        <b class="about-company__slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</b>
+        <p class="about-company__plain-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+          превыше креатива. Работаем не покладая
+          рук, как роботы.</p>
+        <b class="about-company__subtitle">Выполняем заказы на разработку:</b>
+        <ul class="about-company__lpart-list">
+          <li class="about-company__lpart-item">Веб-сайтов любой сложности</li>
+          <li class="about-company__lpart-item">Мобильных приложений для iOS и Android</li>
+          <li class="about-company__lpart-item">Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+      </div>
+      <div class="about-company__right-part">
+        <img src="img/studio-nerds.png" width="360" height="208" alt="Дизайн-студия Nerds">
+        <b class="about-company__subtitle about-company__subtitle--centered-condensed">с 2004 года Любим точность во
+          всем:</b>
+        <ul class="about-company__rpart-list">
+          <li class="about-company__rpart-item">
+            <b class="about-company__percents">146<sup>%</sup></b>
+            <p class="about-company__plain-text">Уровень самоотдачи</p>
+          </li>
+          <li class="about-company__rpart-item">
+            <b class="about-company__percents">100<sup>%</sup></b>
+            <p class="about-company__plain-text">Соблюдение сроков</p>
+          </li>
+          <li class="about-company__rpart-item">
+            <b class="about-company__percents">50<sup>%</sup></b>
+            <p class="about-company__plain-text">Минимальная предоплата</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="parnter-logo">
+      <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
+      <ul class="partner-logo__list">
+        <li class="partner-logo__item">
+          <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
+            <img class="partner-logo__pict" src="img/logo-1.png" width="199" height="68" alt="Сайт HTML Academy">
+          </a>
+        </li>
+        <li class="partner-logo__item">
+          <a class="partner-logo__link" href="#">
+            <img class="partner-logo__pict" src="img/logo-2.png" width="209" height="90"
+                 alt="Сайт Barbershop Borodinski">
+          </a>
+        </li>
+        <li class="partner-logo__item">
+          <a class="partner-logo__link" href="#">
+            <img class="partner-logo__pict" src="img/logo-3.png" width="185" height="52" alt="Сайт Pink">
+          </a>
+        </li>
+        <li class="partner-logo__item">
+          <a class="partner-logo__link" href="#">
+            <img class="partner-logo__pict" src="img/logo-4.png" width="173" height="84" alt="Сайт Mishka">
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section class="contacts">
+      <h2 class="visually-hidden">Как с нами связаться</h2>
+      <img class="contacts__map" src="img/map.jpg" width="1440" height="416"
+           alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+      <div class="contacts__requisites">
+        <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
+        <address class="contacts__plain-text text--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+        <p class="contacts__plain-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey"
+                                                                href="tel:+78122757575">+7
+          (812)
+          275-75-75</a></p>
+        <a class="button contacts__button button--red" href="#">Напишите нам</a>
+      </div>
+    </section>
+  </div>
 </main>
 <footer class="footer">
   <ul class="footer__list">
